language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_inside_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(result) {\n  case result {\n    Ok(value) -> value + 1\n    Error(_) -> panic\n  }\n}"
---
----- BEFORE ACTION
pub fn main(result) {
  case result {
    Ok(value) -> value + 1
                         ↑
    Error(_) -> panic
  }
}


----- AFTER ACTION
const int = 1

pub fn main(result) {
  case result {
    Ok(value) -> value + int
    Error(_) -> panic
  }
}
