language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_inside_use_1.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  use x <- result.try(todo)\n  Ok(123)\n}"
---
----- BEFORE ACTION
pub fn main() {
  use x <- result.try(todo)
  Ok(123)
  ↑      
}


----- AFTER ACTION
const result = Ok(123)

pub fn main() {
  use x <- result.try(todo)
  result
}
