language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_literal_within_list.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = [\"constant\", todo]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = ["constant", todo]
           ↑                
}


----- AFTER ACTION
const string = "constant"

pub fn main() {
  let c = [string, todo]
}
