language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_literal_within_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let c = #(0.333334, todo)\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #(0.333334, todo)
            ▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
const float = 0.333334

pub fn main() {
  let c = #(float, todo)
}
