language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_nested_inside_in_expr.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  [#(\"a\", 0), #(\"b\", 1), #(\"a\", 2)]\n  |> key_filter(\"a\")\n}"
---
----- BEFORE ACTION
pub fn main() {
  [#("a", 0), #("b", 1), #("a", 2)]
   ▔↑                              
  |> key_filter("a")
}


----- AFTER ACTION
const value = #("a", 0)

pub fn main() {
  [value, #("b", 1), #("a", 2)]
  |> key_filter("a")
}
