language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_nil.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let x = Nil\n  x\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  let x = Nil
  ▔▔▔▔↑      
  x
}


----- AFTER ACTION
const x = Nil

pub fn main() {
  x
}
