language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_non_record_variant_1.snap
---
source: language-server/src/tests/action.rs
expression: "pub type Auth {\n  Verified\n  Unverified\n}\n\npub fn main() {\n  let a = Unverified\n  let a = verify(something, a)\n\n  a\n}\n"
---
----- BEFORE ACTION
pub type Auth {
  Verified
  Unverified
}

pub fn main() {
  let a = Unverified
          ▔▔▔▔▔▔▔▔▔↑
  let a = verify(something, a)

  a
}


----- AFTER ACTION
pub type Auth {
  Verified
  Unverified
}

const auth = Unverified

pub fn main() {
  let a = auth
  let a = verify(something, a)

  a
}
